handle wechat title-bar problem bu left two pinterest bug in wechat-mini

--- a/Frontend/static/zaiui/style/app.scss
+++ b/Frontend/static/zaiui/style/app.scss
@@ -4,6 +4,11 @@
 page, .bg-page {
 	background: #FAFAFA;
 }
+.bar-title{
+	font-size: 14px;
+	height: var(--status-bar-height);
+	vertical-align: middle;
+}
 .cu-avatar {
 	background-color: #FFFFFF;
 }
