--- a/Frontend/static/zaiui/style/goods.scss
+++ b/Frontend/static/zaiui/style/goods.scss
@@ -18,7 +18,7 @@
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	padding: 18.18rpx 27.27rpx;
-	color: #ffffff;
+	color: #e54d42;
 	width: 100%;
 	.text-xxl {
 	    font-size: 54.54rpx;
