finish commodity page in frontend and start account page

--- a/Frontend/static/zaiui/style/goods.scss
+++ b/Frontend/static/zaiui/style/goods.scss
@@ -219,7 +219,8 @@
 	.zaiui-recommend-list-box {
 		.recommend-scroll-box {
 			position: relative;
-			width: 100%;
+			margin: 10rpx auto;
+			width: 95%;
 			.recommend-scroll {
 				position: relative;
 				height: 363.63rpx;
