finish account page skeleton v2

--- a/Frontend/static/zaiui/style/goods.scss
+++ b/Frontend/static/zaiui/style/goods.scss
@@ -14,11 +14,11 @@
 
 .zaiui-limited-seckill-box {
 	position: relative;
-	background-image: url('/static/images/home/sundry/aiu.png');
+	background-image: url('/static/images/detail/comDenote.png');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	padding: 18.18rpx 27.27rpx;
-	color: #e54d42;
+	color: #fff;
 	width: 100%;
 	.text-xxl {
 	    font-size: 54.54rpx;
@@ -145,7 +145,7 @@
 	.zaiui-border-view {
 	    position: relative;
 	    background: #efebeb;
-		margin: 21.81rpx 0;	
+			margin: 21.81rpx 0;	
 	    height: 2rpx;
 	    width: 100%;
 	}
