finish commodity and notice detail function

--- a/Frontend/static/zaiui/style/app.scss
+++ b/Frontend/static/zaiui/style/app.scss
@@ -226,3 +226,11 @@ page, .bg-page {
 .cu-form-group picker .picker {
 	text-align: left;
 }
+
+
+.br-top{
+	border-radius: 20rpx 20rpx 0 0;
+}
+.br-bottom{
+	border-radius: 0 0 10rpx 10rpx;
+}
