add some attentative resolution

--- a/Frontend/static/zaiui/style/goods.scss
+++ b/Frontend/static/zaiui/style/goods.scss
@@ -89,6 +89,9 @@
 		.basis-2 {
 			flex-basis: 20%;
 		}
+		.basis-3{
+			flex-basis: 30%;
+		}
 	}
 	.tag-view {
 		margin-right: 9.09rpx;
@@ -140,6 +143,15 @@
 		}
 		.basis-8 {
 			flex-basis: 80%;
+		}
+		.basis-2{
+			flex-basis: 20%;
+		}
+		.basis-3{
+			flex-basis: 30%;
+		}
+		.basis-7{
+			flex-basis: 70%;
 		}
 	}
 	.zaiui-border-view {
