--- a/Frontend/static/zaiui/style/search.scss
+++ b/Frontend/static/zaiui/style/search.scss
@@ -10,9 +10,9 @@
 		    margin: 0 0.8em 0 0.8em;
 		}
 		.search-form {
-			/* #ifdef MP */
-			margin-right: 181.81rpx;
-			/* #endif */
+			// /* #ifdef MP */
+			// margin-right: 181.81rpx;
+			// /* #endif */
 			
 			margin-left: 9.09rpx;
 			.close-icon {
